Header nav menu

--- a/src/shared/sass/_vars.scss
+++ b/src/shared/sass/_vars.scss
@@ -14,9 +14,11 @@ $text_white: #fff;
 
 // transition
 $color_transition: color .2s ease;
+$transition_duration: 0.3s;
 
 //gap
 $g48: 48px;
+$g32: 32px;
 
 
 // font size
