--- a/src/shared/sass/_vars.scss
+++ b/src/shared/sass/_vars.scss
@@ -2,6 +2,8 @@
 $container_base: 1540px;
 $container_pd_base: 0 15px;
 $header_pd: 40px 0;
+$header_pd1024: 20px 0;
+$header_pd768: 12px 0;
 
 // font family
 $ffTikTok: "TikTok Sans", sans-serif;
